// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An entity with a scope of "all" must transform appropriately 1`] = `
Object {
  "privateData": null,
  "publicData": Object {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": Object {
      "address": "123 Main Street, New York, NY, USA",
      "contact1": Object {
        "email": "ellen@contoso.com",
        "gitHubID": "ellencontoso",
        "name": "Ellen Adams",
      },
      "contact2": Object {
        "email": "lisa@contoso.com",
        "gitHubID": "lisacontoso",
        "name": "Lisa Andrews",
      },
      "gitHubOrganization": "contoso",
      "name": "Contoso Ltd.",
      "url": "https://contoso.com/",
    },
    "signature": Object {
      "signedAt": "1970-01-01T00:00:00.000Z",
      "signedBy": "Domenic Denicola",
      "signedByTitle": "Software engineer",
    },
    "verified": false,
    "workstreams": "all",
  },
  "type": "entity",
}
`;

exports[`An entity with an array of known scopes must transform appropriately 1`] = `
Object {
  "privateData": null,
  "publicData": Object {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": Object {
      "address": "123 Main Street, New York, NY, USA",
      "contact1": Object {
        "email": "ellen@contoso.com",
        "gitHubID": "ellencontoso",
        "name": "Ellen Adams",
      },
      "contact2": Object {
        "email": "lisa@contoso.com",
        "gitHubID": "lisacontoso",
        "name": "Lisa Andrews",
      },
      "gitHubOrganization": "contoso",
      "name": "Contoso Ltd.",
      "url": "https://contoso.com/",
    },
    "signature": Object {
      "signedAt": "1970-01-01T00:00:00.000Z",
      "signedBy": "Domenic Denicola",
      "signedByTitle": "Software engineer",
    },
    "verified": false,
    "workstreams": Array [
      "compat",
      "console",
      "xhr",
    ],
  },
  "type": "entity",
}
`;

exports[`An individual with a scope of "all" must transform appropriately 1`] = `
Object {
  "privateData": Object {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": Object {
      "address": "New York, NY, USA",
      "email": "d@domenic.me",
    },
  },
  "publicData": Object {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": Object {
      "gitHubID": "domenic",
      "name": "Domenic Denicola",
    },
    "signature": Object {
      "signedAt": "1970-01-01T00:00:00.000Z",
    },
    "verified": false,
    "workstreams": "all",
  },
  "type": "individual",
}
`;

exports[`An individual with an array of known scopes must transform appropriately 1`] = `
Object {
  "privateData": Object {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": Object {
      "address": "New York, NY, USA",
      "email": "d@domenic.me",
    },
  },
  "publicData": Object {
    "id": "1d8ab899-4d91-48b8-acfa-bf9cde5ad909",
    "info": Object {
      "gitHubID": "domenic",
      "name": "Domenic Denicola",
    },
    "signature": Object {
      "signedAt": "1970-01-01T00:00:00.000Z",
    },
    "verified": false,
    "workstreams": Array [
      "compat",
      "console",
      "xhr",
    ],
  },
  "type": "individual",
}
`;
